--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>素材分类首页</title>
+    <title>素材分类首页 (Google 主题)</title>
+    <!-- 引入 Google Fonts: Noto Sans SC -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="js/emoji-font.css">
     <script src="js/wakelock.js"></script>
     <link rel="shortcut icon" href="js/emoji_128x128.ico">
     <style>
+        /* 全局样式重置与基础设定 */
         body {
             margin: 0;
-            font-family: "Segoe UI", sans-serif;
-            background: linear-gradient(to bottom, #eaeaea, #d4d4d4);
-            color: #333;
+            /* 使用 Google Fonts 的 Noto Sans SC */
+            font-family: 'Noto Sans SC', sans-serif;
+            background: #ffffff;
+            /* 谷歌风格的纯白色背景 */
+            color: #202124;
+            /* 谷歌常用的深灰色文字 */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -21,49 +29,134 @@
             height: 100vh;
             overflow: hidden;
             position: relative;
+            padding: 20px;
+            box-sizing: border-box;
         }
 
         h1 {
-            margin-bottom: 6vh;
+            margin-bottom: 1vh;
             font-size: 4vh;
-            color: #333;
+            color: #4285F4;
+            /* 谷歌蓝色 */
             animation: zoomIn 1.5s ease-out;
-            text-shadow: 0 0.5vh 1vh rgba(255, 255, 255, 0.3);
+            font-weight: 500;
+            /* 稍微加粗 */
+        }
+
+        /* 副标题样式 */
+        h1+h1 {
+            font-size: 2.5vh;
+            color: #5f6368;
+            /* 浅一些的灰色 */
+            margin-top: 0;
+            margin-bottom: 8vh;
         }
 
         .buttons {
             display: flex;
-            gap: 6vh;
+            gap: 2vh;
+            /* 减小按钮间距 */
             z-index: 1;
-            margin-bottom: 6vh;
-            /* 添加底部间距 */
+            margin-bottom: 4vh;
+            flex-wrap: wrap;
+            /* 允许在小屏幕上换行 */
+            justify-content: center;
         }
 
         .category-btn {
             text-decoration: none;
             display: inline-block;
-            padding: 3vh 6vh;
-            font-size: 2.5vh;
+            padding: 1.5vh 3vh;
+            /* 调整按钮内边距 */
+            font-size: 2.2vh;
             border: none;
-            border-radius: 2vh;
+            border-radius: 4px;
+            /* 谷歌风格的小圆角 */
             cursor: pointer;
-            background: #f4f4f4;
-            color: #444;
-            box-shadow: 0 0.5vh 1vh rgba(0, 0, 0, 0.1);
-            transform: scaleY(0.8);
+            color: white;
+            /* 白色文字 */
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+            /* 轻微的阴影 */
+            transform: scaleY(0.95);
             animation: riseUp 1.2s ease-out forwards;
-            transition: background 0.3s, transform 0.3s;
+            transition: background-color 0.2s ease, transform 0.2s ease;
+            font-weight: 500;
         }
 
+        /* 为不同按钮设置谷歌四色 */
+        .category-btn:nth-child(1) {
+            background-color: #4285F4;
+        }
+
+        /* 蓝 */
+        .category-btn:nth-child(2) {
+            background-color: #EA4335;
+        }
+
+        /* 红 */
+        .category-btn:nth-child(3) {
+            background-color: #FBBC05;
+        }
+
+        /* 黄 */
+        .category-btn:nth-child(4) {
+            background-color: #34A853;
+        }
+
+        /* 绿 */
+        .category-btn:nth-child(5) {
+            background-color: #673AB7;
+        }
+
+        /* 紫 (新增颜色以区分) */
+        .category-btn:nth-child(6) {
+            background-color: #F45F42;
+        }
+
+        /* 橙 (新增颜色以区分) */
+        .category-btn:nth-child(7) {
+            background-color: #00ACC1;
+        }
+
+        /* 青 (新增颜色以区分) */
+
         .category-btn:hover {
-            background: #e0e0e0;
+            /* hover 时加深颜色并轻微放大 */
             transform: scale(1.05);
-            color: #000;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+        }
+
+        .category-btn:nth-child(1):hover {
+            background-color: #3367D6;
+        }
+
+        .category-btn:nth-child(2):hover {
+            background-color: #D93025;
+        }
+
+        .category-btn:nth-child(3):hover {
+            background-color: #F29900;
+        }
+
+        .category-btn:nth-child(4):hover {
+            background-color: #2D9F46;
+        }
+
+        .category-btn:nth-child(5):hover {
+            background-color: #5E35B1;
+        }
+
+        .category-btn:nth-child(6):hover {
+            background-color: #E35542;
+        }
+
+        .category-btn:nth-child(7):hover {
+            background-color: #0097A7;
         }
 
         @keyframes zoomIn {
             from {
-                transform: scale(0.5);
+                transform: scale(0.9);
                 opacity: 0;
             }
 
@@ -74,8 +167,14 @@
         }
 
         @keyframes riseUp {
+            from {
+                transform: translateY(20px) scaleY(0.95);
+                opacity: 0;
+            }
+
             to {
-                transform: scaleY(1);
+                transform: translateY(0) scaleY(1);
+                opacity: 1;
             }
         }
 
@@ -87,26 +186,15 @@
             height: 100vh;
             display: flex;
             flex-wrap: wrap;
-            align-content: flex-start;
-            justify-content: center;
-            font-size: 7.5vh;
-            opacity: 0.16;
+            align-content: space-around;
+            justify-content: space-around;
+            font-size: 6vh;
+            opacity: 0.05;
+            /* 降低不透明度，使其更像背景纹理 */
             line-height: 1;
-            animation: fadeInIcons 2s ease-out;
+            pointer-events: none;
+            /* 防止遮挡点击 */
             z-index: 0;
-        }
-
-
-        @keyframes fadeInIcons {
-            from {
-                opacity: 0;
-                transform: scale(0.9);
-            }
-
-            to {
-                opacity: 0.1;
-                transform: scale(1);
-            }
         }
 
         .emoji-rain {
@@ -122,7 +210,7 @@
 
         .emoji {
             position: absolute;
-            font-size: 5vh;
+            font-size: 4vh;
             animation: fall linear infinite;
             opacity: 0;
         }
@@ -130,19 +218,27 @@
         @keyframes fall {
             0% {
                 transform: translateY(-10vh) rotate(0deg);
-                opacity: 0.0;
+                opacity: 0;
+            }
+
+            10% {
+                opacity: 0.7;
+            }
+
+            90% {
+                opacity: 0.7;
             }
 
             100% {
                 transform: translateY(120vh) rotate(360deg);
-                opacity: 1;
+                opacity: 0;
             }
         }
     </style>
 </head>
 
 <body>
-    <h1>选择分类进入emoji素材世界 ✨</h1>
+    <h1>选择分类进入谷歌emoji素材世界 ✨</h1>
     <h1>单击复制表情😊 双击下载3D文档😙</h1>
     <div class="buttons">
         <a href="bios.html" class="category-btn">🐾 生物</a>
@@ -152,8 +248,9 @@
     <div class="buttons">
         <a href="index2.html" class="category-btn" target="_blank" rel="noopener noreferrer">📐 画画</a>
         <a href="https://aj300542.github.io/download.html" class="category-btn" target="_blank"
-            rel="noopener noreferrer">🍎支持aj300542</a>
+            rel="noopener noreferrer">🍎 支持aj300542</a>
         <a href="bios/expressions.html" class="category-btn">🤪 表情</a>
+        <a href="http://aj300542.github.io/emoji/index.html" class="category-btn">🌐 返回主网站</a>
     </div>
     <div class="emoji-rain"></div>
 
@@ -171,7 +268,6 @@
         🐹 🛹 🎮 🧨 🐱 🦊
         🍋 🍚 🐓 📐 🍔 🌹 🧄 👩‍💻 🍞 📱 🛴 📷 🥯 🎺 🍵 🍫 🦉 🧮 🚀 🧊 🥣 🛫 🧀 🕶️ 🍡 🌿 🪥 🍎 🚂 🧊 🐰 🚐 👨‍⚖️ 🍳 🧫
         🧠 🚠 🌺 🌉 🌇 🐚 🎻
-
     </div>
     <script>
         const icons = [
@@ -189,14 +285,15 @@
         ];
 
         const container = document.querySelector('.emoji-rain');
+        const iconCount = window.innerWidth < 768 ? 50 : 100; // 根据屏幕宽度调整emoji数量
 
-        for (let i = 0; i < 100; i++) {
+        for (let i = 0; i < iconCount; i++) {
             const emoji = document.createElement('span');
             emoji.classList.add('emoji');
             emoji.textContent = icons[Math.floor(Math.random() * icons.length)];
             emoji.style.left = Math.random() * 100 + 'vw';
-            emoji.style.animationDuration = 4 + Math.random() * 4 + 's';
-            emoji.style.fontSize = (3 + Math.random() * 4) + 'vh';
+            emoji.style.animationDuration = 5 + Math.random() * 10 + 's'; // 延长下落时间
+            emoji.style.fontSize = (2 + Math.random() * 3) + 'vh';
             emoji.style.animationDelay = Math.random() * 5 + 's';
             container.appendChild(emoji);
         }
