--- a/downloadobj.html
+++ b/downloadobj.html
@@ -8,7 +8,7 @@
   <style>
     @font-face {
       font-family: 'SegoeEmojiOld';
-      src: url('../font/SEGUIEMJ.TTF') format('truetype');
+      src: url('../font/NotoColorEmoji-Regular.ttf') format('truetype');
       font-display: swap;
     }
 
