--- a/downloadobj.html
+++ b/downloadobj.html
@@ -4,18 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>源代码下载</title>
-  <link rel="stylesheet" href="../js/emoji-font.css">
+    <link rel="stylesheet" href="../js/emoji-font.css">
+    <link rel="stylesheet" href="../js/styles.css" />
+
   <style>
-    @font-face {
-      font-family: 'SegoeEmojiOld';
-      src: url('../font/NotoColorEmoji-Regular.ttf') format('truetype');
-      font-display: swap;
-    }
-
-    body {
-      font-family: 'SegoeEmojiOld', 'Segoe UI', sans-serif;
-    }
-
     body {
       display: flex;
       flex-direction: column;
